--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
 <%= render 'layouts/navigation' %>
+<div class="container-fluid">
 <%= yield %>
-
+</div>
+<%= render 'layouts/footer' %>
 </body>
 </html>
