--- a/app/views/restaurant/index.html.erb
+++ b/app/views/restaurant/index.html.erb
@@ -1,6 +1,19 @@
-<h1>Hello Restaurant Enthusiats!</h1>
-<p>This is the index view, it will show a list of the restaurants!</p>
-<% @restaurants.each do |restaurant| %>
-	<h2><%= restaurant.name %></h2>
-		<% link_to show_restaurant_path %>
-<% end %>
+
+<div class="jumbotron">
+		<div class="container">
+			<h1>Hello Restaurant Enthusiats!</h1>
+			<p>This is the index view, it shows a list of the restaurants!</p>
+			<%= link_to "Add a Restaurant", new_restaurant_path, class: "btn btn-primary" %>
+		</div>
+</div>
+<div class="row">
+	<h2 class="text-center">Our Restaurants:</h2>
+</div>
+<div class="row">
+	<% @restaurants.each do |restaurant| %>
+	<div class='col-md-4'>
+		<h2><%= restaurant.name %></h2>
+		<p><%= restaurant.description %></p>
+		<%= link_to "Details", restaurant %>
+	</div>
+	<% end %>
