modifies UI to respond to auth user flow.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 <body>
 <%= render 'layouts/navigation' %>
 <div class="container-fluid">
+<% if notice %>
+	<div class="alert alert-info"><%= notice %></div>
+<% end %>
+<% if alert %>
+	<div class="alert alert-warning"><%= alert %></div>
+<% end %>
 <%= yield %>
 </div>
 <%= render 'layouts/footer' %>
