--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <%= render 'layouts/navigation' %>
-<div class="container-fluid">
+<div class="container">
 <% if notice %>
 	<div class="alert alert-info"><%= notice %></div>
 <% end %>
