--- a/app/views/reservation/new.html.erb
+++ b/app/views/reservation/new.html.erb
@@ -6,21 +6,7 @@
   </div>
   <div class="row">
     <div class="col-md-8">
-      <%= form_for @reservation, url: {action: "create"}, html: {role: "form"} do |f| %>
-    	  <div class="form-group">
-			<%= label(:reservation, :name) %>
-			<%= f.text_field :name, placeholder: "Your name", class: "form-control" %>
-		  </div>
-		  <div class="form-group">
-			<%= label(:reservation, :email) %>
-			<%= f.text_field :email, placeholder: "Your email address", class: "form-control" %>
-		  </div>
-		  <div class="form-group">
-			<%= label(:reservation, :date) %>
-			<%= f.datetime_select :date, class: "form-control" %>
-		  </div>
-		  <%= f.submit "Schedule it!", class: "btn btn-success" %>
-	  <% end %>
+      <%= render "form" %>
     </div>
     <div class="col-md-4">
     </div>
