--- a/app/views/restaurant/show.html.erb
+++ b/app/views/restaurant/show.html.erb
@@ -11,6 +11,8 @@
 			<p>Phone: <%= @restaurant.phone %></p>
 			<p>Website: <%= @restaurant.web %></p>
 		</div>
+		
+		<% if user_signed_in? && current_user.owner? && @restaurant.owner == current_user %>	
 		<div class="col-md-4 col-lg-6">
 			<div class="btn-group">
 				<%= link_to "Make a Reservation",
@@ -22,5 +24,9 @@
 					class: "btn btn-danger" %>
 			</div>
 		</div>
+		<% elsif user_signed_in? %>
+		<%= link_to "Make a Reservation",
+					new_restaurant_reservation_path(@restaurant), class: "btn btn-primary" %>
+		<% end %>
 	</div>
 </div>
