--- a/app/views/restaurant/show.html.erb
+++ b/app/views/restaurant/show.html.erb
@@ -25,8 +25,10 @@
 			</div>
 		</div>
 		<% elsif user_signed_in? %>
-		<%= link_to "Make a Reservation",
-					new_restaurant_reservation_path(@restaurant), class: "btn btn-primary" %>
+			<%= link_to "Make a Reservation",
+						new_restaurant_reservation_path(@restaurant), class: "btn btn-primary" %>
+			<%= link_to "Add to Favorites", restaurant_star_index_path(@restaurant.id), class: 'btn btn-success', id: 'star', remote: true %>
+			
 		<% end %>
 	</div>
 </div>
