--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,6 +21,7 @@
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
         
         <% elsif user_signed_in? %>
+          <li><%= link_to "Dashboard", '/patron' %></li>
           <li><%= link_to current_user.email, edit_user_registration_path %></li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
         
