--- a/app/views/home/patron_dashboard.html.erb
+++ b/app/views/home/patron_dashboard.html.erb
@@ -1,10 +1,27 @@
 <div class="row">
-	<ul>
-  <% @reservations.each do |reso| %>
-	<li class="list-group-item"><%= link_to reso.date_time, reso %><i class="pull-right <%= reso.confirmed ? "glyphicon glyphicon-ok" : "glyphicon glyphicon-remove" %>"></i></li>
-  <% end %>
-	</ul>
-	<% @favorites.each do |f| %>
-	<h2><%= f.name %></h2>
-	<% end %>
+  <div class="col-lg-6">
+    <div class="panel panel-default">
+      <div class="panel-heading">My Reservations</div>
+        <table class="table table-striped">
+          <tr>
+            <th>Name</th>
+            <th>Day and Time</th>
+            <th>Confirmed?</th>
+          </tr>
+        <% @reservations.each do |reso| %>
+            <tr>
+              <td><%= link_to reso.restaurant.name, reso %></td>
+              <td><%= reso.date_time %></td>
+              <td><i class="<%= reso.confirmed ? "glyphicon glyphicon-ok" : "glyphicon glyphicon-remove" %>"></i></td>
+            </tr>
+          <% end %>     
+        </table>
+    </div>
+  </div>
+  <div class="col-lg-5">
+    <h2>My Favorite Restaurants</h2>
+    <% @favorites.each do |f| %>
+      <h3><%= link_to f.name, f %></h3>
+    <% end %>
+  </div>
 </div>
