--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,7 +12,7 @@
 			<p>Website: <%= @restaurant.web %></p>
 		</div>
 		
-		<% if user_signed_in? && current_user.owner? && @restaurant.owner == current_user %>	
+		<% if user_signed_in? && owns_this_restaurant(current_user.id, @restaurant.owner_id) %>	
 		<div class="col-md-4 col-lg-6">
 			<div class="btn-group">
 				<%= link_to "Make a Reservation",
@@ -24,7 +24,7 @@
 					class: "btn btn-danger" %>
 			</div>
 		</div>
-		<% elsif user_signed_in? %>
+		<% elsif user_signed_in? && current_user.patron? %>
 			<%= link_to "Make a Reservation",
 						new_restaurant_reservation_path(@restaurant), class: "btn btn-primary" %>
 			<%= link_to "Add to Favorites", stars_path(@restaurant), method: :post, class: 'btn btn-success', id: 'star', remote: true %>
