--- a/app/views/home/patron_dashboard.html.erb
+++ b/app/views/home/patron_dashboard.html.erb
@@ -11,7 +11,7 @@
         <% @reservations.each do |reso| %>
             <tr>
               <td><%= link_to reso.restaurant.name, reso %></td>
-              <td><%= reso.date_time %></td>
+              <td><p><%= reso.date_time.to_date.to_formatted_s(:long_ordinal) %> - <%= reso.date_time.to_time.strftime("%I:%M %p") %></p></td>
               <td><i class="<%= reso.confirmed ? "glyphicon glyphicon-ok" : "glyphicon glyphicon-remove" %>"></i></td>
             </tr>
           <% end %>     
