--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,5 +1,14 @@
 <div class="container">
 	<div class="row">
 		<%= render "reservation", locals:{reservation: @reservation} %>
+		<div class="col-xs-2 col-md-4">
+	<div class="btn-group">		
+		<%= link_to "Edit Details", edit_reservation_path,
+			html_options = {class: "btn btn-warning"} %>
+		<%= link_to "Cancel", @reservation,
+			method: :delete, data: {confirm: "You sure?"},
+			class: "btn btn-danger" %>
+	</div>
+</div>
 	</div>
 </div>
